// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introspect basic introspection 1`] = `
Array [
  Prisma Schema loaded from schema.prisma,
  generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model Post {
  authorId  Int
  content   String?
  createdAt DateTime @default(now())
  id        Int      @id @default(autoincrement())
  published Boolean  @default(false)
  title     String
  author    User     @relation(fields: [authorId], references: [id])
}

model Profile {
  bio    String?
  id     Int     @id @default(autoincrement())
  userId Int     @unique
  user   User    @relation(fields: [userId], references: [id])
}

model User {
  email   String   @unique
  id      Int      @id @default(autoincrement())
  name    String?
  posts   Post[]
  profile Profile?
}
,
  
// introspectionSchemaVersion: Prisma2,
  ,
]
`;

exports[`introspect basic introspection with --url 1`] = `
Array [
  Prisma Schema loaded from schema.prisma,
  generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model Post {
  authorId  Int
  content   String?
  createdAt DateTime @default(now())
  id        Int      @id @default(autoincrement())
  published Boolean  @default(false)
  title     String
  author    User     @relation(fields: [authorId], references: [id])
}

model Profile {
  bio    String?
  id     Int     @id @default(autoincrement())
  userId Int     @unique
  user   User    @relation(fields: [userId], references: [id])
}

model User {
  email   String   @unique
  id      Int      @id @default(autoincrement())
  name    String?
  posts   Post[]
  profile Profile?
}
,
  
// introspectionSchemaVersion: Prisma2,
  ,
]
`;

exports[`introspect introspection --force 1`] = `
Array [
  Prisma Schema loaded from schema.prisma,
  generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model Post {
  authorId  Int
  content   String?
  createdAt DateTime @default(now())
  id        Int      @id @default(autoincrement())
  published Boolean  @default(false)
  title     String
  User      User     @relation(fields: [authorId], references: [id])
}

model Profile {
  bio    String?
  id     Int     @id @default(autoincrement())
  userId Int     @unique
  User   User    @relation(fields: [userId], references: [id])
}

model User {
  email   String   @unique
  id      Int      @id @default(autoincrement())
  name    String?
  Post    Post[]
  Profile Profile?
}
,
  
// introspectionSchemaVersion: Prisma2,
  ,
]
`;
